--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
       "Ești cea mai bună mamă din lume!",
       "Mulțumesc pentru tot sprijinul tău!",
       "Zâmbește, meriți tot ce e mai frumos!",
-      "Îți doresc o zi plină de iubire și bucurie!"
+      "Îți doresc o zi plină de iubire și bucurie!!"
     ];
     let msgIndex = 0;
     const messageEl = document.getElementById("messages");
